--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,20 @@
-/* :root {
-
+:root {
+  --bg-body: rgba(6, 7, 29, 0.918);
+  --bg-card: rgba(22, 35, 53, 0.829);
+  --font-color: white
+}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-
-} */
+  background-color: var(--bg-body);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
